Update relevance benchmark app (#34)
* updated the api port to 8000 so it doesn't conflict with ControlCe process on MAC OS

had error running because the mac os ControlCe process was using port 5000 which is the app-api server port

* removed pass

--- a/example-apps/relevance-workbench/docker-compose.yml
+++ b/example-apps/relevance-workbench/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     volumes:
       - './app-api:/usr/src/app'
     ports:
-      - 5000:5000
+      - 8000:8000
     environment:
-      - CLOUD_ID=<CLOUD_ID>
+      - CLOUD_ID=<cloud_id>
       - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=<ELASTICSEARCH_PASSWORD>
+      - ELASTICSEARCH_PASSWORD=<elastic pass>
 
   client:
     build:
@@ -23,6 +23,6 @@ services:
     ports:
       - 3000:3000
     environment:
-      - NEXT_API_URL=http://host.docker.internal:5000
+      - NEXT_API_URL=http://host.docker.internal:8000
     depends_on:
       - api
