--- a/example-apps/workplace-search/frontend/tsconfig.json
+++ b/example-apps/workplace-search/frontend/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "paths": {
-      "@/*": ["./src/*"]
-    },
     "typeRoots": ["node_modules/@types", "src/types"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,7 +17,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "noImplicitAny": false,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["./node_modules"]
 }
