--- a/example-apps/workplace-search/frontend/package.json
+++ b/example-apps/workplace-search/frontend/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.216.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
