--- a/example-apps/workplace-search/frontend/package.json
+++ b/example-apps/workplace-search/frontend/package.json
@@ -79,7 +79,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "start:inline-app": "PORT=3002 ENTRY_POINT=src/inline node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:inline-app": "ENTRY_POINT=src/inline node scripts/build.js",
     "format": "prettier --write .",
     "test": "node scripts/test.js"
   },
