--- a/example-apps/workplace-search/requirements.txt
+++ b/example-apps/workplace-search/requirements.txt
@@ -13,14 +13,16 @@ elasticsearch==8.9.0
 Flask==2.3.3
 Flask-Cors==4.0.0
 frozenlist==1.4.0
-google-auth==2.23.0
+google-auth==2.23.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 jq==1.4.1
-langchain==0.0.297
-langsmith==0.0.39
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.305
+langsmith==0.0.41
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 multidict==6.0.4
@@ -39,6 +41,7 @@ requests==2.31.0
 rsa==4.9
 s3transfer==0.6.2
 six==1.16.0
+sniffio==1.3.0
 SQLAlchemy==2.0.20
 tenacity==8.2.3
 tqdm==4.66.1
