--- a/example-apps/workplace-search/requirements.txt
+++ b/example-apps/workplace-search/requirements.txt
@@ -1,27 +1,33 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.5.0
+anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
 blinker==1.6.2
+boto3==1.28.61
+botocore==1.31.61
+cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 dataclasses-json==0.5.14
 elastic-transport==8.4.0
 elasticsearch==8.9.0
+exceptiongroup==1.1.3
 Flask==2.3.3
 Flask-Cors==4.0.0
 frozenlist==1.4.0
 google-auth==2.23.2
 idna==3.4
+importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 jq==1.4.1
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.305
+langchain==0.0.309
 langsmith==0.0.41
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -39,7 +45,7 @@ python-dateutil==2.8.2
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
-s3transfer==0.6.2
+s3transfer==0.7.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
@@ -50,3 +56,4 @@ typing_extensions==4.7.1
 urllib3==1.26.16
 Werkzeug==2.3.7
 yarl==1.9.2
+zipp==3.17.0
