Add elser notebook to makefile

--- a/notebooks/search/Makefile
+++ b/notebooks/search/Makefile
@@ -7,6 +7,7 @@ all:
 		00-quick-start.ipynb \
 		01-keyword-querying-filtering.ipynb \
 		02-hybrid-search.ipynb \
+		03-ELSER.ipynb \
 		04-multilingual.ipynb \
 		05-query-rules.ipynb \
 		06-synonyms-api.ipynb
