--- a/example-apps/internal-knowledge-search/app-ui/package.json
+++ b/example-apps/internal-knowledge-search/app-ui/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@elastic/search-application-client": "^8.9.0-1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
@@ -44,8 +46,11 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0"
   }
 }
