Update Chatbot App + Notebooks to use API Keys, ELSERv2 & Suggested Chunking Parameters (#119)
* remove old docs

* switch to use RecursiveTextSplitter and api key

* update readme for chatbot rag app

* update readme

* update readme

* update readme

* update readme

* add message requires Elasticsearch version

* remove from app

* remove unnecessary output from elser notebook

---------

Co-authored-by: Miguel Grinberg <miguel.grinberg@gmail.com>

--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -1,9 +1,11 @@
 # Make a copy of this file with the name .env and assign values to variables
 
 # Your Elastic Cloud credentials
-ELASTIC_USERNAME=elastic
 ELASTIC_CLOUD_ID=
-ELASTIC_PASSWORD=
+ELASTIC_API_KEY=
+
+# If you are using a self-hosted Elasticsearch
+# ELASTICSEARCH_URL=
 
 # The name of the Elasticsearch indexes
 ES_INDEX=workplace-app-docs
