--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -39,7 +39,7 @@ jmespath==1.0.1
 jq==1.4.1
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.315
+langchain==0.0.333
 langsmith==0.0.65
 MarkupSafe==2.1.3
 marshmallow==3.20.1
@@ -73,3 +73,4 @@ urllib3==1.26.16
 Werkzeug==2.3.7
 yarl==1.9.2
 zipp==3.17.0
+tiktoken==0.5.1
