--- a/notebooks/search/Makefile
+++ b/notebooks/search/Makefile
@@ -1,13 +1,16 @@
 NBTEST = ../../bin/nbtest
+NOTEBOOKS = \
+	00-quick-start.ipynb \
+	01-keyword-querying-filtering.ipynb \
+	02-hybrid-search.ipynb \
+	03-ELSER.ipynb \
+	04-multilingual.ipynb \
+	05-query-rules.ipynb \
+	06-synonyms-api.ipynb
 
-.PHONY: all
+.PHONY: all $(NOTEBOOKS)
 
-all:
-	$(NBTEST) \
-		00-quick-start.ipynb \
-		01-keyword-querying-filtering.ipynb \
-		02-hybrid-search.ipynb \
-		03-ELSER.ipynb \
-		04-multilingual.ipynb \
-		05-query-rules.ipynb \
-		06-synonyms-api.ipynb
+all: $(NOTEBOOKS)
+
+$(NOTEBOOKS):
+	$(NBTEST) $@
