--- a/example-apps/internal-knowledge-search/app-ui/.env
+++ b/example-apps/internal-knowledge-search/app-ui/.env
@@ -1,3 +1,3 @@
-SEARCH_APP_NAME=some-search-application
-SEARCH_APP_API_KEY=xxxxxxxxxxxxxxxxxxx
-SEARCH_APP_ENDPOINT=https://some-search-end-point.co
+REACT_APP_SEARCH_APP_NAME=changeme
+REACT_APP_SEARCH_APP_API_KEY=changeme
+REACT_APP_SEARCH_APP_ENDPOINT=http://localhost:9200
