--- a/notebooks/document-chunking/Makefile
+++ b/notebooks/document-chunking/Makefile
@@ -1,10 +1,11 @@
 NBTEST = ../../bin/nbtest
 NOTEBOOKS = \
-        with-index-pipelines.ipynb
+	with-index-pipelines.ipynb \
+	with-langchain-splitters.ipynb
 
 .PHONY: all $(NOTEBOOKS)
 
 all: $(NOTEBOOKS)
 
 $(NOTEBOOKS):
-	$(NBTEST) $@
+	-$(NBTEST) $@
