--- a/notebooks/search/.nbtest.yml
+++ b/notebooks/search/.nbtest.yml
@@ -1,7 +1,8 @@
 masks:
 - "'name': '[^']+'"
 - "'build_flavor': '[^']+'"
-- '[0-9]+\.[0-9]+\.[0-9]+'
+- '[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?'
+- "'build_snapshot': [^,]+"
 - "'cluster_name': '[^']+'"
 - "'cluster_uuid': '[^']+'"
 - "'build_hash': '[^']+'"
