refactor nbtest as a python package

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@
 .ipynb_checkpoints
 *.egg-info
 __pycache__
+temp.json
+test/nbtest/build
+test/nbtest/dist
+venv
 .venv
-notebooks/**/temp.json
+.env*
