Clean up a few dangling changes

--- a/example-apps/internal-knowledge-search/app-ui/src/config/documentsToSearchResultMappings.json
+++ b/example-apps/internal-knowledge-search/app-ui/src/config/documentsToSearchResultMappings.json
@@ -1,6 +1,6 @@
 {
-  "search-spo": {
-    "title": "Title",
+  "search-mongo": {
+    "title": "name",
     "created": "_timestamp",
     "previewText": "summary",
     "fullText": "description",
