--- a/notebooks/learning-to-rank/sample_data/movies_index_settings.json
+++ b/notebooks/learning-to-rank/sample_data/movies_index_settings.json
@@ -2,8 +2,8 @@
   "mappings": {
     "properties": {
         "id": {"type": "keyword"},
-        "title": {"type": "text"},
-        "overview": {"type": "text"},
+        "title": {"type": "text", "analyzer": "english"},
+        "overview": {"type": "text", "analyzer": "english"},
         "year": {"type": "integer"},
         "budget": {"type": "integer"},
         "votes": {"type": "integer"},
@@ -12,12 +12,14 @@
         "url": {"type": "keyword"},
         "tags": {
           "type": "text",
+          "analyzer": "english",
           "fields": {
               "keyword": {"type": "keyword"}
           }
         },
         "genres": {
           "type": "text",
+          "analyzer": "english",
           "fields": {
               "keyword": {"type": "keyword"}
           }
