one more langchain notebook added to nbtest

--- a/notebooks/langchain/Makefile
+++ b/notebooks/langchain/Makefile
@@ -1,6 +1,7 @@
 NBTEST = ../../bin/nbtest
 NOTEBOOKS = \
-	langchain-using-own-model.ipynb
+	langchain-using-own-model.ipynb \
+	langchain-vector-store-using-elser.ipynb
 
 .PHONY: all $(NOTEBOOKS)
 
