run nbtest through Makefile

--- a/notebooks/search/Makefile
+++ b/notebooks/search/Makefile
@@ -6,7 +6,8 @@ NOTEBOOKS = \
 	03-ELSER.ipynb \
 	04-multilingual.ipynb \
 	05-query-rules.ipynb \
-	06-synonyms-api.ipynb
+	06-synonyms-api.ipynb \
+	tokenization.ipynb
 
 .PHONY: all $(NOTEBOOKS)
 
