--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Setup nbtest
-        run: make nbtest
+        run: make install-nbtest
       - name: Warm up
         continue-on-error: true
         run: sleep 30 && PATCH_ES=1 ELASTIC_CLOUD_ID=foo ELASTIC_API_KEY=bar bin/nbtest notebooks/search/00-quick-start.ipynb
