Added support for using Mistral AI Large Model deployed on Microsoft Azure

--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -34,3 +34,9 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # VERTEX_PROJECT_ID=
 # VERTEX_REGION=
 # GOOGLE_APPLICATION_CREDENTIALS=
+
+# Uncomment and complete if you want to use Mistral AI Models on  Azure
+#LLM_TYPE=mistralai
+#MISTRAL_API_ENDPOINT=https://<endpoint>.<region>.inference.ai.azure.com
+#MISTRAL_API_KEY=
+#MISTRAL_MODEL=
