--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -34,3 +34,9 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # VERTEX_PROJECT_ID=
 # VERTEX_REGION=
 # GOOGLE_APPLICATION_CREDENTIALS=
+
+# Uncomment and complete if you want to use Mistral AI
+# LLM_TYPE=mistral
+# MISTRAL_API_KEY=
+# MISTRAL_API_ENDPOINT=
+# MISTRAL_MODEL=
