add Cohere support to the chatbot example

--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -40,3 +40,8 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # MISTRAL_API_KEY=
 # MISTRAL_API_ENDPOINT=
 # MISTRAL_MODEL=
+
+# Uncomment and complete if you want to use Cohere
+# LLM_TYPE=cohere
+# COHERE_API_KEY=
+# COHERE_MODEL=
