--- a/example-apps/chatbot-rag-app/requirements.in
+++ b/example-apps/chatbot-rag-app/requirements.in
@@ -23,6 +23,9 @@ boto3
 # Mistral dependencies
 langchain-mistralai
 
+# Cohere dependencies
+cohere
+
 # TBD if these are still needed
 exceptiongroup
 importlib-metadata
