Updated langchain-core dependency to resolve conflict.

--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -35,7 +35,7 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # VERTEX_REGION=
 # GOOGLE_APPLICATION_CREDENTIALS=
 
-# Uncomment and complete if you want to use Mistral AI
+# Uncomment and complete if you want to use Mistral AI Large depployed through Microsoft Azure
 # LLM_TYPE=mistral
 # MISTRAL_API_KEY=
 # MISTRAL_API_ENDPOINT=
