Updated to use Elastic Cloud Host rather than cloud_id

--- a/supporting-blog-content/advanced-rag-techniques/.env.example
+++ b/supporting-blog-content/advanced-rag-techniques/.env.example
@@ -1,5 +1,4 @@
-ELASTIC_CLOUD_ENDPOINT=""
-ELASTIC_CLOUD_ID=""
+ELASTIC_CLOUD_HOST=""
 ELASTIC_USERNAME=""
 ELASTIC_PASSWORD=""
 ELASTIC_INDEX_NAME=""
