--- a/supporting-blog-content/automating-traditional-search/env.example
+++ b/supporting-blog-content/automating-traditional-search/env.example
@@ -1,9 +1,8 @@
-ELASTIC_ENDPOINT=""
-ELASTIC_API_KEY=""
-ELASTIC_INDEX_NAME="personal-info-simulator"
+ELASTIC_ENDPOINT=<YOUR ELASTIC ENDPOINT>
+ELASTIC_API_KEY=<YOUR ELASTIC API KEY>
+ELASTIC_INDEX_NAME=<YOUR ELASTIC INDEX NAME>
 
-AZURE_OPENAI_KEY_1=""
-AZURE_OPENAI_KEY_2=""
-AZURE_OPENAI_REGION=""
-AZURE_OPENAI_ENDPOINT=""
-
+AZURE_OPENAI_KEY_1=<AZURE OPEN AI API KEY>
+AZURE_OPENAI_KEY_2=<AZURE OPEN AI API KEY>
+AZURE_OPENAI_REGION=<AZURE OPEN AI API REGION>
+AZURE_OPENAI_ENDPOINT=<AZURE OPEN AI API ENDPOINT>
