--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -7,12 +7,14 @@
 aiohappyeyeballs==2.4.0
     # via aiohttp
 aiohttp==3.10.5
-    # via langchain
+    # via
+    #   langchain
+    #   langchain-community
 aiosignal==1.3.1
     # via aiohttp
 annotated-types==0.7.0
     # via pydantic
-anyio==4.4.0
+anyio==4.6.0
     # via
     #   httpx
     #   openai
@@ -20,11 +22,11 @@ attrs==24.2.0
     # via aiohttp
 blinker==1.8.2
     # via flask
-boto3==1.35.15
+boto3==1.35.24
     # via
     #   -r requirements.in
     #   cohere
-botocore==1.35.15
+botocore==1.35.24
     # via
     #   boto3
     #   s3transfer
@@ -44,8 +46,10 @@ click==8.1.7
     # via
     #   flask
     #   pip-tools
-cohere==5.9.1
+cohere==5.9.4
     # via -r requirements.in
+dataclasses-json==0.6.7
+    # via langchain-community
 distro==1.9.0
     # via openai
 docstring-parser==0.16
@@ -60,7 +64,7 @@ exceptiongroup==1.2.2
     # via -r requirements.in
 fastavro==1.9.7
     # via cohere
-filelock==3.16.0
+filelock==3.16.1
     # via huggingface-hub
 flask==3.0.3
     # via
@@ -74,14 +78,14 @@ frozenlist==1.4.1
     #   aiosignal
 fsspec==2024.9.0
     # via huggingface-hub
-google-api-core[grpc]==2.19.2
+google-api-core[grpc]==2.20.0
     # via
     #   google-cloud-aiplatform
     #   google-cloud-bigquery
     #   google-cloud-core
     #   google-cloud-resource-manager
     #   google-cloud-storage
-google-auth==2.34.0
+google-auth==2.35.0
     # via
     #   google-api-core
     #   google-cloud-aiplatform
@@ -89,7 +93,7 @@ google-auth==2.34.0
     #   google-cloud-core
     #   google-cloud-resource-manager
     #   google-cloud-storage
-google-cloud-aiplatform==1.65.0
+google-cloud-aiplatform==1.67.1
     # via -r requirements.in
 google-cloud-bigquery==3.25.0
     # via google-cloud-aiplatform
@@ -140,15 +144,15 @@ httpx-sse==0.4.0
     # via
     #   cohere
     #   langchain-mistralai
-huggingface-hub==0.24.6
+huggingface-hub==0.25.1
     # via tokenizers
-idna==3.8
+idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
     #   yarl
-importlib-metadata==8.4.0
+importlib-metadata==8.5.0
     # via -r requirements.in
 itsdangerous==2.2.0
     # via flask
@@ -164,41 +168,52 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.2.16
+langchain==0.3.0
+    # via
+    #   -r requirements.in
+    #   langchain-community
+langchain-community==0.3.0
     # via -r requirements.in
-langchain-core==0.2.38
+langchain-core==0.3.5
     # via
     #   langchain
+    #   langchain-community
     #   langchain-elasticsearch
     #   langchain-mistralai
     #   langchain-text-splitters
-langchain-elasticsearch==0.2.2
+langchain-elasticsearch==0.3.0
     # via -r requirements.in
-langchain-mistralai==0.1.13
+langchain-mistralai==0.2.0
     # via -r requirements.in
-langchain-text-splitters==0.2.4
+langchain-text-splitters==0.3.0
     # via langchain
-langsmith==0.1.117
+langsmith==0.1.125
     # via
     #   langchain
+    #   langchain-community
     #   langchain-core
 markupsafe==2.1.5
     # via
     #   jinja2
     #   werkzeug
+marshmallow==3.22.0
+    # via dataclasses-json
 multidict==6.1.0
     # via
     #   aiohttp
     #   yarl
+mypy-extensions==1.0.0
+    # via typing-inspect
 numexpr==2.10.1
     # via -r requirements.in
 numpy==1.26.4
     # via
     #   elasticsearch
     #   langchain
+    #   langchain-community
     #   numexpr
     #   shapely
-openai==1.44.1
+openai==1.47.0
     # via -r requirements.in
 orjson==3.10.7
     # via langsmith
@@ -209,6 +224,7 @@ packaging==24.1
     #   google-cloud-bigquery
     #   huggingface-hub
     #   langchain-core
+    #   marshmallow
 parameterized==0.9.0
     # via cohere
 pip-tools==7.4.1
@@ -218,7 +234,7 @@ proto-plus==1.24.0
     #   google-api-core
     #   google-cloud-aiplatform
     #   google-cloud-resource-manager
-protobuf==5.28.0
+protobuf==5.28.2
     # via
     #   google-api-core
     #   google-cloud-aiplatform
@@ -227,24 +243,28 @@ protobuf==5.28.0
     #   grpc-google-iam-v1
     #   grpcio-status
     #   proto-plus
-pyasn1==0.6.0
+pyasn1==0.6.1
     # via
     #   pyasn1-modules
     #   rsa
-pyasn1-modules==0.4.0
+pyasn1-modules==0.4.1
     # via google-auth
-pydantic==2.9.1
+pydantic==2.9.2
     # via
     #   cohere
     #   google-cloud-aiplatform
     #   langchain
     #   langchain-core
+    #   langchain-mistralai
     #   langsmith
     #   openai
-pydantic-core==2.23.3
+    #   pydantic-settings
+pydantic-core==2.23.4
     # via
     #   cohere
     #   pydantic
+pydantic-settings==2.5.2
+    # via langchain-community
 pyproject-hooks==1.1.0
     # via
     #   build
@@ -254,13 +274,16 @@ python-dateutil==2.9.0.post0
     #   botocore
     #   google-cloud-bigquery
 python-dotenv==1.0.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   pydantic-settings
 pyyaml==6.0.2
     # via
     #   huggingface-hub
     #   langchain
+    #   langchain-community
     #   langchain-core
-regex==2024.7.24
+regex==2024.9.11
     # via tiktoken
 requests==2.32.3
     # via
@@ -270,6 +293,7 @@ requests==2.32.3
     #   google-cloud-storage
     #   huggingface-hub
     #   langchain
+    #   langchain-community
     #   langsmith
     #   tiktoken
 rsa==4.9
@@ -278,7 +302,7 @@ s3transfer==0.10.2
     # via boto3
 shapely==2.0.6
     # via google-cloud-aiplatform
-simsimd==5.1.2
+simsimd==5.4.2
     # via elasticsearch
 six==1.16.0
     # via python-dateutil
@@ -287,11 +311,14 @@ sniffio==1.3.1
     #   anyio
     #   httpx
     #   openai
-sqlalchemy==2.0.34
-    # via langchain
+sqlalchemy==2.0.35
+    # via
+    #   langchain
+    #   langchain-community
 tenacity==8.5.0
     # via
     #   langchain
+    #   langchain-community
     #   langchain-core
 tiktoken==0.7.0
     # via -r requirements.in
@@ -303,7 +330,7 @@ tqdm==4.66.5
     # via
     #   huggingface-hub
     #   openai
-types-requests==2.32.0.20240907
+types-requests==2.32.0.20240914
     # via cohere
 typing-extensions==4.12.2
     # via
@@ -314,7 +341,10 @@ typing-extensions==4.12.2
     #   pydantic
     #   pydantic-core
     #   sqlalchemy
-urllib3==2.2.2
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via dataclasses-json
+urllib3==2.2.3
     # via
     #   botocore
     #   elastic-transport
@@ -326,7 +356,7 @@ wheel==0.44.0
     # via pip-tools
 yarl==1.11.1
     # via aiohttp
-zipp==3.20.1
+zipp==3.20.2
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
