--- a/supporting-blog-content/hybrid-search-for-an-e-commerce-product-catalogue/product-store-search/.gitignore
+++ b/supporting-blog-content/hybrid-search-for-an-e-commerce-product-catalogue/product-store-search/.gitignore
@@ -1,24 +1,24 @@
-# Arquivos de configuração local
+# Local configuration files
 .env
 .vscode/
 .idea/
 
-# Arquivos gerados
+# Generated files
 __pycache__/
 *.pyc
 *.egg-info/
 dist/
 build/
 
-# Arquivos de cache
+# Cache files
 .cache/
 npm-cache/
 
-# Arquivos de testes
+# Test files
 tests/
 *.pytest_cache
 
-# Arquivos de documentação gerada
+# Generated documentation files
 docs/_build/
 
 # Virtual environments
@@ -26,7 +26,7 @@ venv/
 env/
 .venv/
 
-# Arquivos grandes ou binários
+# Large or binary files
 *.mp4
 *.avi
 *.mov
