Add support for semantic search with the dense vector

--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -11,6 +11,15 @@ ELASTIC_API_KEY=
 ES_INDEX=workplace-app-docs
 ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 
+# For sparse vector (e.g. ELSER)
+ES_STRATEGY_TYPE=sparse
+ES_MODEL_ID=.elser_model_2
+# For dense vector (e.g. E5)
+# ES_STRATEGY_TYPE=dense
+# ES_MODEL_ID=.multilingual-e5-small_linux-x86_64
+# ES_VECTOR_FIELD=text_semantic.inference.chunks.embeddings
+# ES_QUERY_FIELD=text
+
 # Uncomment and complete if you want to use OpenAI
 # LLM_TYPE=openai
 # OPENAI_API_KEY=
