Updates chatbot-rag-app and simplifies instructions
This updates chatbot-rag-app to the latest libraries and simplifies
instructions by delegating details of configuration to the .env file.

This also works around problems we found in DEBUG mode, by using
production mode regardless of task. Doing so notably will allow
tracing to work in the future.

Efforts here were thanks to many, despite me raising it, notably
@joemcelroy @ezimuel @xrmx and @anuraaga

Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/example-apps/chatbot-rag-app/requirements.in
+++ b/example-apps/chatbot-rag-app/requirements.in
@@ -1,33 +1,14 @@
-# package management
-pip-tools
-
 # core dependencies
 elasticsearch
 langchain
-langchain-community
 langchain-elasticsearch
 tiktoken
 flask
 flask-cors
-python-dotenv
 
-# OpenAI dependencies
-openai
-
-# Vertex AI dependencies
-google-cloud-aiplatform
-grpcio-status
-
-# BedRock dependencies
-boto3
-
-# Mistral dependencies
+# LLM dependencies
+langchain-openai
+langchain-cohere
+langchain-google-vertexai
+langchain-aws
 langchain-mistralai
-
-# Cohere dependencies
-cohere
-
-# TBD if these are still needed
-exceptiongroup
-importlib-metadata
-numexpr
