--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -6,6 +6,8 @@ ELASTIC_API_KEY=
 
 # If you are using a self-hosted Elasticsearch
 # ELASTICSEARCH_URL=
+# ELASTICSEARCH_USER=
+# ELASTICSEARCH_PASSWORD=
 
 # The name of the Elasticsearch indexes
 ES_INDEX=workplace-app-docs
@@ -14,6 +16,7 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # Uncomment and complete if you want to use OpenAI
 # LLM_TYPE=openai
 # OPENAI_API_KEY=
+# CHAT_MODEL=gpt-4o-mini
 
 # Uncomment and complete if you want to use Azure OpenAI
 # LLM_TYPE=azure
