--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -12,7 +12,7 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 
 # Uncomment and complete if you want to use OpenAI
 # LLM_TYPE=openai
-# OPENAI_API_KEY=sk-YOUR_API_KEY
+# OPENAI_API_KEY=
 # CHAT_MODEL=gpt-4o-mini
 
 # Uncomment and complete if you want to use Azure OpenAI
@@ -20,7 +20,7 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 ## "Azure OpenAI Endpoint" in https://oai.azure.com/resource/overview
 # AZURE_OPENAI_ENDPOINT=https://YOUR_RESOURCE_NAME.openai.azure.com/
 ## "API key 1 (or 2)" in https://oai.azure.com/resource/overview
-# AZURE_OPENAI_API_KEY=abc01...
+# AZURE_OPENAI_API_KEY=
 ## "Inference version" from https://learn.microsoft.com/en-us/azure/ai-services/openai/api-version-deprecation
 # OPENAI_API_VERSION=2024-10-01-preview
 ## "Name" from https://oai.azure.com/resource/deployments
