--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -1,11 +1,10 @@
 # Make a copy of this file with the name .env and assign values to variables
 
-# Your Elastic Cloud credentials
-ELASTIC_CLOUD_ID=
-ELASTIC_API_KEY=
-
-# If you are using a self-hosted Elasticsearch
-# ELASTICSEARCH_URL=
+# How you connect to Elasticsearch: change details to your instance
+ELASTICSEARCH_URL=http://localhost:9200
+ELASTICSEARCH_USER=elastic
+ELASTICSEARCH_PASSWORD=elastic
+# ELASTICSEARCH_API_KEY=
 
 # The name of the Elasticsearch indexes
 ES_INDEX=workplace-app-docs
@@ -14,13 +13,18 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # Uncomment and complete if you want to use OpenAI
 # LLM_TYPE=openai
 # OPENAI_API_KEY=
+# CHAT_MODEL=gpt-4o-mini
 
 # Uncomment and complete if you want to use Azure OpenAI
 # LLM_TYPE=azure
-# OPENAI_VERSION=
-# OPENAI_BASE_URL=
-# OPENAI_API_KEY=
-# OPENAI_ENGINE=
+## "Azure OpenAI Endpoint" in https://oai.azure.com/resource/overview
+# AZURE_OPENAI_ENDPOINT=https://YOUR_RESOURCE_NAME.openai.azure.com/
+## "API key 1 (or 2)" in https://oai.azure.com/resource/overview
+# AZURE_OPENAI_API_KEY=
+## "Inference version" from https://learn.microsoft.com/en-us/azure/ai-services/openai/api-version-deprecation
+# OPENAI_API_VERSION=2024-10-01-preview
+## "Name" from https://oai.azure.com/resource/deployments
+# CHAT_DEPLOYMENT=YOUR_DEPLOYMENT_NAME
 
 # Uncomment and complete if you want to use Bedrock LLM
 # LLM_TYPE=bedrock
