--- a/example-apps/chatbot-rag-app/docker-compose.yml
+++ b/example-apps/chatbot-rag-app/docker-compose.yml
@@ -4,9 +4,10 @@ services:
       context: .
     container_name: ingest-data
     restart: 'no'
+    environment:
+      FLASK_APP: api/app.py
     env_file:
       - .env
-      - .flaskenv
     command: flask create-index
 
   api-frontend:
@@ -18,6 +19,5 @@ services:
       context: .
     env_file:
       - .env
-      - .flaskenv
     ports:
       - "4000:4000"
