--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -28,10 +28,10 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 
 # Uncomment and complete if you want to use Bedrock LLM
 # LLM_TYPE=bedrock
-# AWS_ACCESS_KEY=
-# AWS_SECRET_KEY=
-# AWS_REGION=
-# AWS_MODEL_ID=
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_DEFAULT_REGION=
+# CHAT_MODEL=amazon.titan-text-lite-v1
 
 # Uncomment and complete if you want to use Vertex AI
 # LLM_TYPE=vertex
