final docker and env
Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/example-apps/chatbot-rag-app/docker-compose.yml
+++ b/example-apps/chatbot-rag-app/docker-compose.yml
@@ -1,3 +1,5 @@
+name: chatbot-rag-app
+
 services:
   ingest-data:
     build:
@@ -5,10 +7,14 @@ services:
     container_name: ingest-data
     restart: 'no'
     environment:
+      # host.docker.internal means connect to the host machine, e.g. your laptop
+      ELASTICSEARCH_URL: "http://host.docker.internal:9200"
       FLASK_APP: api/app.py
     env_file:
       - .env
     command: flask create-index
+    extra_hosts:
+        - "host.docker.internal:host-gateway"
 
   api-frontend:
     depends_on:
@@ -17,7 +23,12 @@ services:
     container_name: api-frontend
     build:
       context: .
+    environment:
+      # host.docker.internal means connect to the host machine, e.g. your laptop
+      ELASTICSEARCH_URL: "http://host.docker.internal:9200"
     env_file:
       - .env
     ports:
       - "4000:4000"
+    extra_hosts:
+        - "host.docker.internal:host-gateway"
