--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -35,17 +35,24 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 
 # Uncomment and complete if you want to use Vertex AI
 # LLM_TYPE=vertex
-# VERTEX_PROJECT_ID=
-# VERTEX_REGION=
+## Project that has the service "aiplatform.googleapis.com" enabled
+# GOOGLE_CLOUD_PROJECT=
+# GOOGLE_CLOUD_REGION=
+# CHAT_MODEL=gemini-1.5-flash-002
+## Needed if you haven't run `gcloud auth application-default login`
 # GOOGLE_APPLICATION_CREDENTIALS=
 
 # Uncomment and complete if you want to use Mistral AI
 # LLM_TYPE=mistral
+## Key in https://console.mistral.ai/api-keys/
 # MISTRAL_API_KEY=
-# MISTRAL_API_ENDPOINT=
-# MISTRAL_MODEL=
+## 'API Endpoints' from https://docs.mistral.ai/getting-started/models/models_overview/
+# CHAT_MODEL=open-mistral-nemo
+## Only set this if not using the default Mistral base URL
+# MISTRAL_BASE_URL=
 
 # Uncomment and complete if you want to use Cohere
 # LLM_TYPE=cohere
+## Key in https://dashboard.cohere.com/api-keys
 # COHERE_API_KEY=
-# COHERE_MODEL=
+# CHAT_MODEL=command-r7b-12-2024
