--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -31,7 +31,7 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # AWS_ACCESS_KEY_ID=
 # AWS_SECRET_ACCESS_KEY=
 # AWS_DEFAULT_REGION=
-# CHAT_MODEL=amazon.titan-text-lite-v1
+# CHAT_MODEL=anthropic.claude-3-5-sonnet-20240620-v1:0
 
 # Uncomment and complete if you want to use Vertex AI
 # LLM_TYPE=vertex
