chatbot-rag-app: use Elastic Distribution of OpenTelemetry (EDOT)
Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -31,7 +31,7 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 # AWS_ACCESS_KEY_ID=
 # AWS_SECRET_ACCESS_KEY=
 # AWS_DEFAULT_REGION=
-# CHAT_MODEL=anthropic.claude-3-5-sonnet-20240620-v1:0
+# CHAT_MODEL=amazon.titan-text-lite-v1
 
 # Uncomment and complete if you want to use Vertex AI
 # LLM_TYPE=vertex
@@ -56,3 +56,24 @@ ES_INDEX_CHAT_HISTORY=workplace-app-docs-chat-history
 ## Key in https://dashboard.cohere.com/api-keys
 # COHERE_API_KEY=
 # CHAT_MODEL=command-r7b-12-2024
+
+# Set to false, if you want to record logs, traces and metrics.
+OTEL_SDK_DISABLED=true
+
+# Assign the service name that shows up in Kibana
+OTEL_SERVICE_NAME=chatbot-rag-app
+
+# Default to send traces to the Elastic APM server
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:8200
+OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+
+# Change to 'false' to hide prompt and completion content
+OTEL_INSTRUMENTATION_GENAI_CAPTURE_MESSAGE_CONTENT=true
+
+# Export metrics every 3 seconds instead of every minute
+OTEL_METRIC_EXPORT_INTERVAL=3000
+# Export traces every 3 seconds instead of every 5 seconds
+OTEL_BSP_SCHEDULE_DELAY=3000
+# Change to affect behavior of which resources are detected. Note: these
+# choices are specific to the language, in this case Python.
+OTEL_EXPERIMENTAL_RESOURCE_DETECTORS=process_runtime,os,otel,telemetry_distro
