--- a/example-apps/chatbot-rag-app/Dockerfile
+++ b/example-apps/chatbot-rag-app/Dockerfile
@@ -28,4 +28,20 @@ COPY api ./api
 COPY data ./data
 
 EXPOSE 4000
+
+# Default to disabling instrumentation, can be overridden to false in
+# docker invocations to reenable.
+ENV OTEL_SDK_DISABLED=true
+
+# https://github.com/elastic/genai-instrumentation/issues/255
+# Currently Python SDK has a bug that spams logs when opentelemetry-instrument is used
+# with SDK being disabled. Until it is fixed, we handle it in our own entrypoint by
+# avoiding opentelemetry-instrument when SDK is disabled.
+RUN echo 'if [ "${OTEL_SDK_DISABLED:-true}" == "false" ]; \
+  then \
+    opentelemetry-instrument $@; \
+  else \
+    exec $@; \
+  fi' > entrypoint.sh
+ENTRYPOINT [ "bash", "-eu", "./entrypoint.sh" ]
 CMD [ "python", "api/app.py"]
