--- a/example-apps/chatbot-rag-app/docker-compose.yml
+++ b/example-apps/chatbot-rag-app/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       # host.docker.internal means connect to the host machine, e.g. your laptop
       ELASTICSEARCH_URL: "http://host.docker.internal:9200"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://host.docker.internal:8200"
       FLASK_APP: api/app.py
     env_file:
       - .env
@@ -26,6 +27,7 @@ services:
     environment:
       # host.docker.internal means connect to the host machine, e.g. your laptop
       ELASTICSEARCH_URL: "http://host.docker.internal:9200"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://host.docker.internal:8200"
     env_file:
       - .env
     ports:
