chatbot-rag-app: adds openteletry for cohere via langtrace
Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/example-apps/chatbot-rag-app/requirements.in
+++ b/example-apps/chatbot-rag-app/requirements.in
@@ -13,5 +13,7 @@ langchain-google-vertexai
 langchain-aws
 langchain-mistralai
 
-# otel dependencies
+# EDOT dependencies
 elastic-opentelemetry
+# Additional LLM support not in EDOT
+langtrace-python-sdk
