--- a/example-apps/openai-embeddings/env.example
+++ b/example-apps/openai-embeddings/env.example
@@ -6,11 +6,9 @@ ELASTICSEARCH_USER=elastic
 ELASTICSEARCH_PASSWORD=elastic
 # ELASTICSEARCH_API_KEY=
 
-# OPENAI_API_KEY=
-# EMBEDDINGS_MODEL=text-embedding-ada-002
-
 # Update this with your real OpenAI API key
-OPENAI_API_KEY=sk-YOUR_API_KEY
+OPENAI_API_KEY=
+# EMBEDDINGS_MODEL=text-embedding-ada-002
 
 # Uncomment to use Ollama instead of OpenAI
 # OPENAI_BASE_URL=http://localhost:11434/v1
