openai-embeddings: enable traces, logs and metrics with EDOT Node.js
Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/example-apps/openai-embeddings/Dockerfile
+++ b/example-apps/openai-embeddings/Dockerfile
@@ -8,5 +8,9 @@ RUN --mount=type=cache,target=/root/.npm \
 USER node
 EXPOSE 3000
 
+# Default to disabling instrumentation, can be overridden to false in
+# docker invocations to reenable.
+ENV OTEL_SDK_DISABLED=true
+
 ENTRYPOINT ["npm", "run"]
 CMD ["app"]
