--- a/example-apps/openai-embeddings/docker-compose.yml
+++ b/example-apps/openai-embeddings/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       # host.docker.internal means connect to the host machine, e.g. your laptop
       ELASTICSEARCH_URL: "http://host.docker.internal:9200"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://host.docker.internal:8200"
     env_file:
       - .env
     command: generate
@@ -25,6 +26,7 @@ services:
     environment:
       # host.docker.internal means connect to the host machine, e.g. your laptop
       ELASTICSEARCH_URL: "http://host.docker.internal:9200"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://host.docker.internal:8200"
     env_file:
       - .env
     ports:
