--- a/.github/workflows/docker-chatbot-rag-app.yml
+++ b/.github/workflows/docker-chatbot-rag-app.yml
@@ -50,11 +50,13 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: export digest
+        if: github.event_name == 'push'
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
       - name: upload digest
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v4
         with:
           name: digests-${{ matrix.runner }}
