polish-and-docker
Signed-off-by: Adrian Cole <adrian.cole@elastic.co>

--- a/supporting-blog-content/building-multimodal-rag-with-elasticsearch-gotham/.env.template
+++ b/supporting-blog-content/building-multimodal-rag-with-elasticsearch-gotham/.env.template
@@ -1,13 +1,17 @@
-# Elasticsearch Configuration
-ELASTIC_API_KEY=your_api_key_here
-ELASTICSEARCH_ENDPOINT=your_elastic_endpoint
+# Make a copy of this file with the name .env and assign values to variables
+
+# How you connect to Elasticsearch: change details to your instance
+ELASTICSEARCH_URL=
+ELASTICSEARCH_API_KEY=
+# If not using API key, uncomment these and fill them in:
+# ELASTICSEARCH_USER=elastic
+# ELASTICSEARCH_PASSWORD=elastic
 
 # OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=
 
 # Model Configuration
-MODEL_PATH=~/.cache/torch/checkpoints/imagebind_huge.pth
 
 # Optional Configuration
-#LOG_LEVEL=INFO
-#DEBUG=False
+# LOG_LEVEL=INFO
+# DEBUG=False
